syntax = "proto3";

package protobuf;
import "google/protobuf/timestamp.proto";

enum LogLevel {
  DEBUG = 0;
  INFO = 1;
  WARNING = 2;
  ERROR = 3;
  FATAL = 4;
}

enum ApplicationLanguage {
  RUST = 0;
  JAVA = 1;
  CPP = 2;
  GO = 3;
}

message LogMessage {
  google.protobuf.Timestamp timestamp = 1;
  LogLevel log_level = 2;
  string message = 3;
  ApplicationLanguage app_lang = 4;
  string uid = 5;
}